# swe-team

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  UPSTREAM.md  orchestrator.md  team-brief.md
.github/workflows/: ci.yml  release.yml
agents/: architect.md  coder-backend.md  coder-cpp.md  coder-frontend.md  coder-python.md  pm.md  qa.md
agents/upstream/: architect.upstream.md  coder-backend.upstream.md  coder-cpp.upstream.md  coder-frontend.upstream.md  coder-python.upstream.md  pm.upstream.md  qa.upstream.md
binary/: .gitignore  README.md  index.html  package-lock.json  package.json
binary/driver/: .gitignore  README.md  build-sidecar.sh  orchestrator_driver.py  pyproject.toml
binary/driver/tests/: test_backends.py  test_keys_file.py  test_local_backend.py  test_protocol.py  test_tools.py  test_user_question.py
binary/frontend/: index.html
binary/frontend/src/: main.js
binary/src/: main.js
binary/src-tauri/: Cargo.toml  tauri.conf.json
binary/src-tauri/src/: main.rs
csv2json-service/: BUILD_LOG.json
csv2json-service/design/: build-plan.md  contracts.md  system.md
csv2json-service/repo/client/: README.md  pyproject.toml
csv2json-service/repo/client/csv2json_client/: __init__.py  cli.py  http_client.py
csv2json-service/repo/client/tests/: test_cli.py
csv2json-service/repo/server/: README.md  pyproject.toml
csv2json-service/repo/server/app/: convert.py  errors.py  main.py  schemas.py
csv2json-service/repo/server/tests/: test_convert.py  test_http.py
csv2json-service/reports/: _e3.stderr  results.md  review.md  run-tests.sh  test-plan.md
csv2json-service/reports/fixtures/: basic.csv  no_header.csv
csv2json-service/specs/: brief.md  idea.md
scripts/: append_buildlog.py  install-agents.sh  set-key.sh  sync-upstream.sh
tests/: check_buildlog.py  check_install.sh  check_protocol.py  lint_agents.py  run_all.sh  test_append_buildlog.py
tests/e2e/: csv2json.sh
