[project]
name = "swe-team-driver"
version = "0.1.0"
description = "Phase 2 driver — runs the SWE agent team headless over stdio JSON."
requires-python = ">=3.11"
authors = [{ name = "gokulpm" }]
license = "MIT"
dependencies = [
    # Both backends are declared as core deps so the shipped sidecar can talk
    # to either provider without an `extras_require` install dance. Each
    # backend is constructed lazily — neither import happens unless the
    # matching LLM_BACKEND value is selected.
    "anthropic>=0.40",
    "google-genai>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyinstaller>=6",
]

[project.scripts]
swe-team-driver = "orchestrator_driver:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["orchestrator_driver"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter
