[package]
name = "swe-team"
version = "0.1.0"
description = "SWE Team desktop shell"
authors = ["gokulpm"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "swe_team_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
