[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2json-client"
version = "0.1.0"
description = "CLI client for the csv2json HTTP service"
requires-python = ">=3.9"
authors = [{ name = "csv2json-service" }]
dependencies = []

[project.scripts]
csv2json-client = "csv2json_client.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["csv2json_client*"]
exclude = ["tests*"]
